--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ indexmap = "1.6"
 
 [dev-dependencies]
 criterion = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [workspace]
 members = [".", "macros"]
@@ -20,3 +22,6 @@ members = [".", "macros"]
 [[bench]]
 name = "simple"
 harness = false
+
+[profile.release]
+debug = 1
