--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,11 @@ fnv = "1.0"
 anyhow = "1.0"
 regex = "1.4"
 lazy_static = "1.4"
+indexmap = "1.6"
+quickcheck = "1"
+regex-syntax = "0.6.18"
+
+[dev-dependencies]
+quickcheck = "1"
+quickcheck_macros = "1"
+
