--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 regex-syntax = "0.6.25"
-dispatcher = {path = "../host-dispatcher"}
+# dispatcher = {path = "../host-dispatcher"}
