--- a/lieutenant_parser/Cargo.toml
+++ b/lieutenant_parser/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "parser"
+name = "lieutenant_parser"
 version = "0.1.0"
 authors = ["Miro Andrin <miro.sveits@gmail.com>"]
 edition = "2018"
